# slafling

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.ja.md  README.md  config.template.toml  prek.toml
.github/workflows/: build.yml  ci.yml  release.yml
src/: cli.rs  config.rs  keychain.rs  main.rs  slack.rs  token.rs
src/config/: env.rs  file.rs  mod.rs  resolved.rs  util.rs
src/slack/: client.rs  mod.rs
