[package]
name = "slafling"
version = "0.1.0"
edition = "2021"
description = "Fling messages to Slack"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
